<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="0dp"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <RelativeLayout
                android:baselineAligned="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:contentDescription="Provider network"
                    android:id="@+id/button_provider_network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_provider_network"
                    android:background="@color/colorTransparent"
                    android:visibility="invisible" />

                <ImageButton
                    android:contentDescription="Provider unknown"
                    android:id="@+id/button_provider_unknown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_provider_unknown"
                    android:background="@color/colorTransparent"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:baselineAligned="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:gravity="end"
                android:orientation="horizontal">

                <!--GPS ENABLED-->
                <ImageButton
                    android:contentDescription="Enabled GPS"
                    android:id="@+id/button_gps_enabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:background="@color/colorTransparent"
                    android:visibility="visible" />
                <!--GPS DISABLED-->
                <ImageButton
                    android:contentDescription="Disabled GPS"
                    android:id="@+id/button_gps_disabled"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_off"
                    android:background="@color/colorTransparent"
                    android:visibility="invisible" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/workout_time_hint"
                    android:drawableStart="@drawable/ic_timer"
                    android:drawableLeft="@drawable/ic_timer"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:layout_margin="1dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/accuracyTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <TextView
                android:id="@+id/workout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="1dp"
                android:text="@string/workout_time"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="42sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="10"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:gravity="center" >

                <TextView
                    android:id="@+id/workout_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/workout_pace"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_speed"
                    android:drawableLeft="@drawable/ic_speed"
                    android:drawablePadding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="top"
                    android:text="@string/workout_pace_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="10"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:gravity="center" >

                <TextView
                    android:id="@+id/workout_avg_pace"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/workout_avg_pace"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_speed"
                    android:drawableLeft="@drawable/ic_speed"
                    android:drawablePadding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="top"
                    android:text="@string/workout_avg_pace_hint" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="10"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:gravity="center" >

                <TextView
                    android:id="@+id/workout_bpm"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/workout_pulse"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_heart"
                    android:drawableLeft="@drawable/ic_heart"
                    android:drawablePadding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="top"
                    android:text="@string/workout_pulse_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="10"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:gravity="center" >

                <TextView
                    android:id="@+id/workout_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/workout_distance"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:drawableStart="@drawable/ic_space"
                    android:drawableLeft="@drawable/ic_space"
                    android:drawablePadding="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="top"
                    android:text="@string/workout_distance_hint" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_controls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/layout_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/button_start"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:background="@drawable/circle_orange"
                android:drawableTop="@drawable/ic_play"
                android:paddingTop="20dp"
                android:text="@string/start_workout"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <Button
                android:id="@+id/button_pause"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="1dp"
                android:background="@drawable/circle_red"
                android:drawableTop="@drawable/ic_pause"
                android:paddingTop="20dp"
                android:text="@string/pause_workout"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/layout_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_margin="1dp"
                android:gravity="center">
                <Button
                    android:id="@+id/button_stop"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="1dp"

                    android:layout_marginBottom="1dp"
                    android:background="@drawable/circle_red"
                    android:drawableTop="@drawable/ic_stop"
                    android:paddingTop="20dp"
                    android:text="@string/stop_workout"
                    android:textColor="@color/colorWhite"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_margin="1dp"
                android:gravity="center">
                <Button
                    android:id="@+id/button_continue"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/circle_orange"
                    android:drawableTop="@drawable/ic_play"
                    android:paddingTop="20dp"
                    android:text="@string/continue_workout"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="508dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageButton
            android:id="@+id/button_fixing"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/workout_btn_mark_set"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_green"
            android:src="@drawable/ic_mark_place_start"
            android:visibility="visible"/>

        <!--Default gray. When activity started bg. must be green.-->
        <ImageButton
            android:id="@+id/button_stop_fixing"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_gray"
            android:contentDescription="@string/workout_btn_mark_remove"
            android:src="@drawable/ic_mark_place_stop"
            android:visibility="invisible"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>